==> donginhb/GCP-MulitMCUs/HwPlatform/STM32F10X/HwDrivers/HW_Uart.c <==
#include "HW_Uart.h"
#include "HW_IRQHandler.h"
#include "HW_Gpio.h"
#include "HW_SysCtrl.h"
#include "chip.h"
#include "ring_buffer.h"
#include <string.h>
#include <stdlib.h>
#define SL_ASSERT(x)
#define USARTx_GET_BRR(Fpclk, BaudRate)  \
  (((uint16_t)((Fpclk)/(16*(BaudRate)))<<4) | \
  ((uint8_t)((((Fpclk)/(16.0*(BaudRate))) - (uint16_t)((Fpclk)/(16*(BaudRate))))*16)))
#define RBUF_SIZE   64      /*** Must be a power of 2 (2,4,8,16,32,64,128,256,512,...) ***/
#define UART_RB_SIZE    (128)

static void HW_UART_DmaTxInit(uint8_t uUartNode)
{
    //开时钟 
    if (uUartNode != HW_UART_NODE3)
    {
        RCC->AHBENR |= (0X1<<0);  //DMA1时钟使能 
    }
    else
    {
        RCC->AHBENR |= (0X1<<1);  //DMA2时钟使能
    }
    
    //配置工作模式 
    USART_TxDmaChannel[uUartNode]->CCR &= ~(0X1<<14);  //非内存-内存模式
    USART_TxDmaChannel[uUartNode]->CCR &= ~(0X3<<12);
    USART_TxDmaChannel[uUartNode]->CCR |=  (0X1<<12);  //中等优先级
    
    USART_TxDmaChannel[uUartNode]->CCR &= ~(0X3<<10);
    USART_TxDmaChannel[uUartNode]->CCR |=  (0X0<<10);  //内存:8位数据帧格式
    USART_TxDmaChannel[uUartNode]->CCR &= ~(0X3<<8);
    USART_TxDmaChannel[uUartNode]->CCR |=  (0X0<<8);   //外设:8位数据帧格式
    
    USART_TxDmaChannel[uUartNode]->CCR |=  (0X1<<7);   //内存增量模式
    USART_TxDmaChannel[uUartNode]->CCR &= ~(0X1<<6);   //外设非增量模式
    USART_TxDmaChannel[uUartNode]->CCR &= ~(0X1<<5);   //非循环模式
    USART_TxDmaChannel[uUartNode]->CCR |=  (0X1<<4);   //从内存中读
    
    USART_TxDmaChannel[uUartNode]->CCR &= ~(0X1<<3);   //关闭错误中断
    USART_TxDmaChannel[uUartNode]->CCR &= ~(0X1<<2);   //关闭半传输中断
    USART_TxDmaChannel[uUartNode]->CCR |=  (0X1<<1);   //开传输完成中断
    
    HW_NVIC_Enable(USART_TX_DMA_IRQn[uUartNode], 2, 2); //开内核中断
    
    //配置外设地址 
    USART_TxDmaChannel[uUartNode]->CPAR = (uint32_t)&(USART[uUartNode]->DR);
    
    //关闭通道 
    USART_TxDmaChannel[uUartNode]->CCR &= ~(0X1<<0);   //关闭通道,在开启接受/发送时再启动
    
}

void HW_UART_Init(uint8_t uUartNode, uint32_t ulBaudRate)
{
    //判断入参
    if (uUartNode >= HW_UART_NODE_NUM)
    {
        return;
    }
    
    //设置中断回调
    HW_UART_ConfigItCallBack(uUartNode);
    
    //初始化环形FIFO
    RingBuffer_Init(&m_RxRing[uUartNode], m_uRxBuff[uUartNode], 1, UART_RB_SIZE);
    
    //配置引脚
    HW_UART_IOConfig(uUartNode);
    
    //配置工作模式
    HW_UART_ModeConfig(uUartNode, ulBaudRate);
    
    //配置DMA
    HW_UART_DmaRxInit(uUartNode);
    HW_UART_DmaTxInit(uUartNode);
    
}

static UART_TX_NODE **List_GetHead(uint8_t uUartNode)
{
    UART_TX_NODE **pHeadNode = NULL;

    switch (uUartNode)
    {
    case HW_UART_NODE0: pHeadNode = &g_HeadNodePtr0; break;
    case HW_UART_NODE1: pHeadNode = &g_HeadNodePtr1; break;
    case HW_UART_NODE2: pHeadNode = &g_HeadNodePtr2; break;
    case HW_UART_NODE3: pHeadNode = &g_HeadNodePtr3; break;
    default: break;
    }

    return pHeadNode;
}

static void HW_UART_DmaSend(uint8_t uUartNode, uint8_t *pSBuff, uint32_t ulSize)
{
    //等待串口上轮发送完成
    while (!(USART[uUartNode]->SR & (1<<6)));
    
    //关闭通道
    USART_TxDmaChannel[uUartNode]->CCR &= ~(0X1<<0);
    
    //配置内存地址
    USART_TxDmaChannel[uUartNode]->CMAR = (uint32_t)pSBuff;
    
    //配置发送数量
    USART_TxDmaChannel[uUartNode]->CNDTR = ulSize;
    
    //启动传输
    USART_TxDmaChannel[uUartNode]->CCR |=  (0X1<<0);
    
    
}

static void HW_UART0_RX_IRQHandler(void)
{
    if (USART[HW_UART_NODE0]->SR & (0x1<<4))  //空闲帧中断入口
    {
        //清标志位
        USART[HW_UART_NODE0]->DR;      //总线空闲中断标志位由软件序列清除:先读SR,再读DR
        
        //计算接收到的帧长
        uint16_t nRecvCnt = RBUF_SIZE - USART_RxDmaChannel[HW_UART_NODE0]->CNDTR;
        
        //复位DMA
        HW_UART_RxDMAReset(HW_UART_NODE0);
        
        //数据帧处理
        RingBuffer_InsertMult(&m_RxRing[HW_UART_NODE0], Uart0_RecvBuff, nRecvCnt);
    }
    
}

static void HW_UART1_RX_IRQHandler(void)
{
    if (USART[HW_UART_NODE1]->SR & (0x1<<4))  //空闲帧中断入口
    {
        //清标志位
        USART[HW_UART_NODE1]->DR;      //总线空闲中断标志位由软件序列清除:先读SR,再读DR
        
        //计算接收到的帧长
        uint16_t nRecvCnt = RBUF_SIZE - USART_RxDmaChannel[HW_UART_NODE1]->CNDTR;
        
        //复位DMA
        HW_UART_RxDMAReset(HW_UART_NODE1);
        
        //数据帧处理
        RingBuffer_InsertMult(&m_RxRing[HW_UART_NODE1], Uart1_RecvBuff, nRecvCnt);
    }
    
}

static void HW_UART2_RX_IRQHandler(void)
{
    if (USART[HW_UART_NODE2]->SR & (0x1<<4))  //空闲帧中断入口
    {
        //清标志位
        USART[HW_UART_NODE2]->DR;      //总线空闲中断标志位由软件序列清除:先读SR,再读DR
        
        //计算接收到的帧长
        uint16_t nRecvCnt = RBUF_SIZE - USART_RxDmaChannel[HW_UART_NODE2]->CNDTR;
        
        //复位DMA
        HW_UART_RxDMAReset(HW_UART_NODE2);
        
        //数据帧处理
        RingBuffer_InsertMult(&m_RxRing[HW_UART_NODE2], Uart2_RecvBuff, nRecvCnt);
    }
    
}

static void HW_UART3_RX_IRQHandler(void)
{
    if (USART[HW_UART_NODE3]->SR & (0x1<<4))  //空闲帧中断入口
    {
        //清标志位
        USART[HW_UART_NODE3]->DR;      //总线空闲中断标志位由软件序列清除:先读SR,再读DR
        
        //计算接收到的帧长
        uint16_t nRecvCnt = RBUF_SIZE - USART_RxDmaChannel[HW_UART_NODE3]->CNDTR;
        
        //复位DMA
        HW_UART_RxDMAReset(HW_UART_NODE3);
        
        //数据帧处理
        RingBuffer_InsertMult(&m_RxRing[HW_UART_NODE3], Uart3_RecvBuff, nRecvCnt);
    }
    
}
