==> donginhb/GCP-MulitMCUs/HwPlatform/LPC43XX/HwDrivers/HW_Uart.c <==
#include "HW_Uart.h"
#include "HW_IRQHandler.h"
#include "chip.h"
#include <string.h>
#include <stdlib.h>
#define SL_ASSERT(x)
#define HW_UART_COUNT       (4)
#define UART_RB_SIZE        (256)

static void HW_UART_DmaTxInit(uint8_t uUartNode)
{
    //获取空闲通道
    m_uDmaFreeChannel[uUartNode] = Chip_GPDMA_GetFreeChannel(LPC_GPDMA, 0);
    
    //使能中断
    NVIC_DisableIRQ(DMA_IRQn);
    NVIC_SetPriority(DMA_IRQn, ((0x01 << 3) | 0x01));
    NVIC_EnableIRQ(DMA_IRQn);
    
    //配置中断
    switch (uUartNode)
    {
    case HW_UART_NODE_0: 
        {
            //设置中断回调
            HW_IRQ_SetTrgCallback(HW_UART0_DMATC_IRQHandler, LPC_IRQ_TRG_DMA_CH1 + m_uDmaFreeChannel[HW_UART_NODE_0]);
            break;
        }
    case HW_UART_NODE_1: 
        {
            //设置中断回调
            HW_IRQ_SetTrgCallback(HW_UART1_DMATC_IRQHandler, LPC_IRQ_TRG_DMA_CH1 + m_uDmaFreeChannel[HW_UART_NODE_1]);
            break;
        }
    case HW_UART_NODE_2: 
        {
            //设置中断回调
            HW_IRQ_SetTrgCallback(HW_UART2_DMATC_IRQHandler, LPC_IRQ_TRG_DMA_CH1 + m_uDmaFreeChannel[HW_UART_NODE_2]);
            break;
        }
    case HW_UART_NODE_3: 
        {
            //设置中断回调
            HW_IRQ_SetTrgCallback(HW_UART3_DMATC_IRQHandler, LPC_IRQ_TRG_DMA_CH1 + m_uDmaFreeChannel[HW_UART_NODE_3]);
            break;
        }
    default: break; //不应该出现在这里
    }
    
}

void HW_UART_Init(uint8_t uUartNode, uint32_t ulBaudRate)
{
    //确认是否已经初始化过
    if (m_uUartInitFlags & (0x1<<uUartNode))
    {
        return;
    }
    
    //设置初始化标志位
    m_uUartInitFlags |= (0x1<<uUartNode);
    
    //初始化IO
    HW_UART_IO_Init(uUartNode);
    
    //初始化串口基本配置
    Chip_UART_Init(USART[uUartNode]);

    //初始化波特率
    Chip_UART_SetBaud(USART[uUartNode], ulBaudRate);
    
    //配置工作模式(8-1-N)
    Chip_UART_ConfigData(USART[uUartNode], UART_LCR_WLEN8 | UART_LCR_SBS_1BIT | UART_LCR_PARITY_DIS);
    
    //配置FIFO(使能并支持DMA模式)
    Chip_UART_SetupFIFOS(USART[uUartNode], (UART_FCR_FIFO_EN | UART_FCR_RX_RS | UART_FCR_TX_RS | UART_FCR_DMAMODE_SEL | UART_FCR_TRG_LEV3));
    
    //初始化中断配置(Rx)
    HW_UART_RxItInit(uUartNode);
    
    //初始化DMA配置(Tx)
    HW_UART_DmaTxInit(uUartNode);
    
    //使能发送
    Chip_UART_TXEnable(USART[uUartNode]);
    
}

static UART_TX_NODE **List_GetHead(uint8_t uUartNode)
{
    UART_TX_NODE **pHeadNode = NULL;

    switch (uUartNode)
    {
    case HW_UART_NODE_0: pHeadNode = &g_HeadNodePtr0; break;
    case HW_UART_NODE_1: pHeadNode = &g_HeadNodePtr1; break;
    case HW_UART_NODE_2: pHeadNode = &g_HeadNodePtr2; break;
    case HW_UART_NODE_3: pHeadNode = &g_HeadNodePtr3; break;
    default: break;
    }

    return pHeadNode;
}

static void HW_UART_DmaSend(uint8_t uUartNode, uint8_t *pSBuff, uint32_t ulSize)
{
    //调用DMA传输函数
    Chip_GPDMA_Transfer(LPC_GPDMA, m_uDmaFreeChannel[uUartNode],
                      (uint32_t) pSBuff,
                      m_uDmaUartTxMuxCode[uUartNode],
                      GPDMA_TRANSFERTYPE_M2P_CONTROLLER_DMA,
                      ulSize);
    
}

static void HW_UART0_RX_IRQHandler(void)
{
    Chip_UART_RXIntHandlerRB(LPC_USART0, &m_RxRing[HW_UART_NODE_0]);
    
}

static void HW_UART1_RX_IRQHandler(void)
{
    Chip_UART_RXIntHandlerRB(LPC_UART1, &m_RxRing[HW_UART_NODE_1]);
    
}

static void HW_UART2_RX_IRQHandler(void)
{
    Chip_UART_RXIntHandlerRB(LPC_USART2, &m_RxRing[HW_UART_NODE_2]);
    
}

static void HW_UART3_RX_IRQHandler(void)
{
    Chip_UART_RXIntHandlerRB(LPC_USART3, &m_RxRing[HW_UART_NODE_3]);
    
}
